chore(agent): allow to configure probes failureThreshold (#1710)

--- a/charts/agent/tests/readiness_probe_test.yaml
+++ b/charts/agent/tests/readiness_probe_test.yaml
@@ -16,7 +16,8 @@ tests:
                path: /healthz
                port: 24483
              initialDelaySeconds: 90
-             periodSeconds: 3
+             periodSeconds: 10
+             failureThreshold: 9
     template: templates/daemonset.yaml
   - it: "[DaemonSet] Readiness Probe (agent == 12.18.0)"
     set:
@@ -31,7 +32,8 @@ tests:
               path: /healthz
               port: 24483
             initialDelaySeconds: 90
-            periodSeconds: 3
+            periodSeconds: 10
+            failureThreshold: 9
     template: templates/daemonset.yaml
   - it: "[DaemonSet] Readiness Probe (agent < 12.18.0)"
     set:
@@ -47,7 +49,8 @@ tests:
                 - -e
                 - /opt/draios/logs/running
             initialDelaySeconds: 90
-            periodSeconds: 3
+            periodSeconds: 10
+            failureThreshold: 9
     template: templates/daemonset.yaml
   - it: "[DaemonSet] Readiness Probe (agent == dev)"
     set:
@@ -63,7 +66,8 @@ tests:
                 - -e
                 - /opt/draios/logs/running
             initialDelaySeconds: 90
-            periodSeconds: 3
+            periodSeconds: 10
+            failureThreshold: 9
     template: templates/daemonset.yaml
   - it: "[DaemonSet] Readiness Probe (agent == latest)"
     set:
@@ -79,7 +83,8 @@ tests:
                 - -e
                 - /opt/draios/logs/running
             initialDelaySeconds: 90
-            periodSeconds: 3
+            periodSeconds: 10
+            failureThreshold: 9
     template: templates/daemonset.yaml
   - it: "[DelegatedAgentDeployment] Readiness Probe (agent > 12.18.0)"
     set:
@@ -96,7 +101,9 @@ tests:
               path: /healthz
               port: 24483
             initialDelaySeconds: 90
-            periodSeconds: 3
+            periodSeconds: 10
+            failureThreshold: 9
+
   - it: "[DelegatedAgentDeployment] Readiness Probe (agent == 12.18.0)"
     set:
       delegatedAgentDeployment:
@@ -112,7 +119,9 @@ tests:
               path: /healthz
               port: 24483
             initialDelaySeconds: 90
-            periodSeconds: 3
+            periodSeconds: 10
+            failureThreshold: 9
+
   - it: "[DelegatedAgentDeployment] Readiness Probe (agent < 12.18.0)"
     set:
       delegatedAgentDeployment:
@@ -129,7 +138,9 @@ tests:
                 - -e
                 - /opt/draios/logs/running
             initialDelaySeconds: 90
-            periodSeconds: 3
+            periodSeconds: 10
+            failureThreshold: 9
+
   - it: "[DelegatedAgentDeployment] Readiness Probe (agent == dev)"
     set:
       delegatedAgentDeployment:
@@ -146,7 +157,9 @@ tests:
                 - -e
                 - /opt/draios/logs/running
             initialDelaySeconds: 90
-            periodSeconds: 3
+            periodSeconds: 10
+            failureThreshold: 9
+
   - it: "[DelegatedAgentDeployment] Readiness Probe (agent == latest)"
     set:
       delegatedAgentDeployment:
@@ -163,18 +176,22 @@ tests:
                 - -e
                 - /opt/draios/logs/running
             initialDelaySeconds: 90
-            periodSeconds: 3
+            periodSeconds: 10
+            failureThreshold: 9
+
   - it: Test setting probe delays
     set:
       daemonset:
         probes:
           initialDelay: 5
           periodDelay: 3
+          failureThreshold: 10
       delegatedAgentDeployment:
         deployment:
           probes:
             initialDelay: 5
             periodDelay: 3
+            failureThreshold: 10
         enabled: true
     asserts:
       - equal:
@@ -183,6 +200,9 @@ tests:
       - equal:
           path: spec.template.spec.containers[0].readinessProbe.periodSeconds
           value: 3
+      - equal:
+          path: spec.template.spec.containers[0].readinessProbe.failureThreshold
+          value: 10
 
   - it: "Do not use the HTTP Readiness Probe on GKE Autopilot"
     set:
@@ -200,7 +220,8 @@ tests:
                 - -e
                 - /opt/draios/logs/running
             initialDelaySeconds: 90
-            periodSeconds: 3
+            periodSeconds: 10
+            failureThreshold: 9
 
   - it: "Do not use the HTTP Readiness Probe on GKE Autopilot"
     set:
@@ -217,4 +238,5 @@ tests:
                 - -e
                 - /opt/draios/logs/running
             initialDelaySeconds: 90
-            periodSeconds: 3
+            periodSeconds: 10
+            failureThreshold: 9
