fix: update github job name to match task

--- a/.github/workflows/kubectl-update.yaml
+++ b/.github/workflows/kubectl-update.yaml
@@ -10,7 +10,7 @@ permissions:
   pull-requests: write
 
 jobs:
-  agent-release:
+  kubectl-update:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
