--- a/charts/registry-scanner/templates/clusterrolebinding.yaml
+++ b/charts/registry-scanner/templates/clusterrolebinding.yaml
@@ -15,12 +15,12 @@ subjects:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: {{ include "registry-scanner.fullname" . }}-crb-sa-token-requester
+  name: {{ include "registry-scanner.fullname" . }}-crb-token-requestor
   namespace: {{ .Release.Namespace }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: cluster-role-sa-token-requester
+  name: token-requestor
 subjects:
 - kind: ServiceAccount
   name: {{ include "registry-scanner.serviceAccountName" . }}
