--- a/charts/node-analyzer/templates/configmap-host-scanner.yaml
+++ b/charts/node-analyzer/templates/configmap-host-scanner.yaml
@@ -47,7 +47,7 @@ data:
   podman_socket_path: {{ .Values.nodeAnalyzer.hostScanner.scanContainers.podmanSocketPath | quote}}
   {{- end }}
   {{- end}}
-  prom_enabled: {{ .Values.nodeAnalyzer.hostScanner.prometheus.enabled | default false }}
+  prom_enabled: {{ .Values.nodeAnalyzer.hostScanner.prometheus.enabled | default false | quote }}
   {{- if .Values.nodeAnalyzer.hostScanner.prometheus.endpoint }}
   prom_endpoint: {{ .Values.nodeAnalyzer.hostScanner.prometheus.endpoint | quote }}
   {{- end }}
