fix: use strict semver for test pod image tag update
without the use of 'strict: true' in the versionfilter, updatecli
could end up using just `major.minor` for the image tag and omitting
any patch version (if present). by setting `strict: true` the tool
will always search for, and use, an image tag which includes the patch
number (ie. my-image:1.2.3).

--- a/.github/updatecli.d/config-update-bitnami-kubectl-image.yaml
+++ b/.github/updatecli.d/config-update-bitnami-kubectl-image.yaml
@@ -32,6 +32,7 @@ sources:
       image: bitnami/kubectl
       versionfilter:
         kind: semver
+        strict: true
 
 targets:
   bumpAgentChart:
