chore(node-analyzer): bump host-scanner to v0.9.0 (#1713)
Co-authored-by: Michele Mangili <83061719+michele-mangili@users.noreply.github.com>

--- a/charts/node-analyzer/templates/configmap-host-scanner.yaml
+++ b/charts/node-analyzer/templates/configmap-host-scanner.yaml
@@ -47,4 +47,11 @@ data:
   podman_socket_path: {{ .Values.nodeAnalyzer.hostScanner.scanContainers.podmanSocketPath | quote}}
   {{- end }}
   {{- end}}
+  prom_enabled: {{ .Values.nodeAnalyzer.hostScanner.prometheus.enabled | default false | quote }}
+  {{- if .Values.nodeAnalyzer.hostScanner.prometheus.endpoint }}
+  prom_endpoint: {{ .Values.nodeAnalyzer.hostScanner.prometheus.endpoint | quote }}
+  {{- end }}
+  {{- if .Values.nodeAnalyzer.hostScanner.prometheus.port }}
+  prom_port: {{ .Values.nodeAnalyzer.hostScanner.prometheus.port | quote }}
+  {{- end }}
 {{- end }}
