--- a/charts/agent/templates/daemonset-windows.yaml
+++ b/charts/agent/templates/daemonset-windows.yaml
@@ -45,9 +45,11 @@ spec:
         configMap:
 #          name: {{ include "agent-windows.fullname" . }}
           name: {{ include "agent.configmapName" . | printf "%s-windows" | trunc 63 | trimSuffix "-" }}
-      {{- with .Values.nodeSelector }}
       nodeSelector:
-        {{- toYaml . | nindent 8 }}
+      {{- if .Values.windowsDaemonset.nodeSelector }}
+        {{ toYaml .Values.windowsDaemonset.nodeSelector | nindent 8 }}
+      {{- else }}
+        "kubernetes.io/os": windows
       {{- end }}
       {{- with .Values.affinity }}
       affinity:
