--- a/charts/agent/templates/daemonset-windows.yaml
+++ b/charts/agent/templates/daemonset-windows.yaml
@@ -43,8 +43,7 @@ spec:
       volumes:
       - name: config
         configMap:
-#          name: {{ include "agent-windows.fullname" . }}
-          name: {{ include "agent.configmapName" . | printf "%s-windows" | trunc 63 | trimSuffix "-" }}
+          name: {{ include "agent.configmapName" . }}
       nodeSelector:
       {{- if .Values.windowsDaemonset.nodeSelector }}
         {{ toYaml .Values.windowsDaemonset.nodeSelector | nindent 8 }}
