--- a/charts/node-analyzer/values.yaml
+++ b/charts/node-analyzer/values.yaml
@@ -432,7 +432,7 @@ nodeAnalyzer:
     debug: false
     image:
       repository: sysdig/kspm-analyzer
-      tag: 1.43.0
+      tag: 1.43.2
       digest:
       pullPolicy:
 
@@ -497,6 +497,14 @@ nodeAnalyzer:
       existingCaConfigMap:
       # Provide the filename that is defined inside the existing ConfigMap.  Required if existingCaConfigMap is set.
       existingCaConfigMapKeyName:
+
+      # If Bottlerocket is enabled then the apiclient and api socket will be mounted
+  bottlerocket:
+    enabled: false
+    # Path to host apiclient binary
+    apiClientPath: /usr/bin/apiclient
+    # Path to host api socket
+    apiServerSocketPath: /run/api.sock
 
 tests:
   timeout: 300s
