--- a/charts/agent/templates/daemonset-windows.yaml
+++ b/charts/agent/templates/daemonset-windows.yaml
@@ -21,9 +21,12 @@ spec:
         {{- end }}
     spec:
       serviceAccountName: {{ template "agent.serviceAccountName" .}}
-      {{- with .Values.imagePullSecrets }}
+      {{- if .Values.windows.image.pullSecrets }}
       imagePullSecrets:
-        {{- toYaml . | nindent 8 }}
+        {{ toYaml .Values.windows.image.pullSecrets | nindent 8 }}
+      {{- else if .Values.global.image.pullSecrets }}
+      imagePullSecrets:
+        {{ toYaml .Values.global.image.pullSecrets | nindent 8 }}
       {{- end }}
       securityContext:
         windowsOptions:
