--- a/charts/agent/templates/daemonset-windows.yaml
+++ b/charts/agent/templates/daemonset-windows.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.windows.enabled }}
 apiVersion: apps/v1
 kind: DaemonSet
 metadata:
@@ -70,3 +71,4 @@ spec:
       tolerations:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+{{- end }}
