--- a/charts/agent/tests/secure_light_config_test.yaml
+++ b/charts/agent/tests/secure_light_config_test.yaml
@@ -196,3 +196,55 @@ tests:
             network_topology:
               enabled: false
     template: configmap.yaml
+
+  - it: Testing if memdump settings is overridable also on secure_light mode with agent version 12.16.3
+    set:
+      image:
+        tag: 12.16.3
+      sysdig:
+        accessKey: AAAAAAAA-BBBB-CCCC-DDDD-EEEEEEEEEEEE
+        settings:
+          memdump:
+            enabled: true
+          feature:
+            mode: secure_light
+      secure:
+        enabled: true
+    asserts:
+      - notMatchRegex:
+          path: data['dragent.yaml']
+          pattern: |-
+            memdump:
+              enabled: false
+      - matchRegex:
+          path: data['dragent.yaml']
+          pattern: |-
+            memdump:
+              enabled: true
+    template: configmap.yaml
+
+  - it: Testing if memdump settings is overridable also on secure_light mode with agent version 12.20.1
+    set:
+      image:
+        tag: 12.20.1
+      sysdig:
+        accessKey: AAAAAAAA-BBBB-CCCC-DDDD-EEEEEEEEEEEE
+        settings:
+          memdump:
+            enabled: true
+          feature:
+            mode: secure_light
+      secure:
+        enabled: true
+    asserts:
+      - notMatchRegex:
+          path: data['dragent.yaml']
+          pattern: |-
+            memdump:
+              enabled: false
+      - matchRegex:
+          path: data['dragent.yaml']
+          pattern: |-
+            memdump:
+              enabled: true
+    template: configmap.yaml
