feat(node-analyzer): bump host-scanner to v0.9.1

--- a/charts/node-analyzer/templates/daemonset-node-analyzer.yaml
+++ b/charts/node-analyzer/templates/daemonset-node-analyzer.yaml
@@ -914,6 +914,8 @@ spec:
                 optional: true
           - name: TMPDIR
             value: "/tmp"
+          - name: PROBES_ENABLED
+            value: "true"
           - name: PROBES_PORT
             value: {{ .Values.nodeAnalyzer.hostScanner.probesPort | quote }}
           - name: PROM_ENABLED
