--- a/charts/agent/templates/daemonset-windows.yaml
+++ b/charts/agent/templates/daemonset-windows.yaml
@@ -45,6 +45,11 @@ spec:
             mountPath: /Sysdig/Agent/Config
           - name: secrets
             mountPath: /Sysdig/Agent/Secrets
+          {{- if eq (include "sysdig.custom_ca.enabled"  (dict "global" .Values.global.ssl "component" .Values.ssl)) "true" }}
+          - name: ca-cert
+            mountPath: /etc/ca-certs
+            readOnly: true
+          {{- end }}
       terminationGracePeriodSeconds: 0
       volumes:
       - name: config
@@ -57,6 +62,19 @@ spec:
           {{- else }}
           secretName: {{ include "agent.accessKeySecret" . }}
           {{- end }}
+      {{- if eq (include "sysdig.custom_ca.useValues"  (dict "global" .Values.global.ssl "component" .Values.ssl)) "true" }}
+      - name: ca-cert
+        secret:
+          secretName: {{ include "agent.fullname" . }}-ca
+      {{- else if eq (include "sysdig.custom_ca.useExistingSecret"  (dict "global" .Values.global.ssl "component" .Values.ssl)) "true" }}
+      - name: ca-cert
+        secret:
+          secretName: {{ include "sysdig.custom_ca.existingSecret" (dict "global" .Values.global.ssl "component" .Values.ssl) }}
+      {{- else if eq (include "sysdig.custom_ca.useExistingConfigMap" (dict "global" .Values.global.ssl "component" .Values.ssl)) "true" }}
+      - name: ca-cert
+        configMap:
+          name: {{ include "sysdig.custom_ca.existingConfigMap" (dict "global" .Values.global.ssl "component" .Values.ssl) }}
+      {{- end }}
       nodeSelector:
       {{- if .Values.windows.nodeSelector }}
         {{ toYaml .Values.windows.nodeSelector | nindent 8 }}
