--- a/charts/cluster-shield/templates/secrets.yaml
+++ b/charts/cluster-shield/templates/secrets.yaml
@@ -22,3 +22,22 @@ data:
   {{- end }}
 {{- end }}
 ---
+{{- if eq "true" (include "cluster-shield.proxyEnabled" .) }}
+apiVersion: v1
+kind: Secret
+metadata:
+  name: {{ include "cluster-shield.proxySecretName" . }}
+  labels:
+    {{- include "cluster-shield.labels" . | nindent 4 }}
+data:
+  {{- if or .Values.proxy.httpProxy .Values.global.proxy.httpProxy }}
+  httpProxy: {{ (.Values.proxy.httpProxy | default .Values.global.proxy.httpProxy) | b64enc | quote }}
+  {{- end }}
+  {{- if or .Values.proxy.httpsProxy .Values.global.proxy.httpsProxy }}
+  httpsProxy: {{ (.Values.proxy.httpsProxy | default .Values.global.proxy.httpsProxy) | b64enc | quote }}
+  {{- end }}
+  {{- if or .Values.proxy.noProxy .Values.global.proxy.noProxy }}
+  noProxy: {{ (.Values.proxy.noProxy | default .Values.global.proxy.noProxy) | b64enc | quote }}
+  {{- end }}
+{{- end }}
+---
