--- a/charts/cluster-shield/templates/deployment.yaml
+++ b/charts/cluster-shield/templates/deployment.yaml
@@ -24,14 +24,21 @@ spec:
         {{- toYaml . | nindent 8 }}
         {{- end }}
     spec:
+      {{- if .Values.imagePullSecrets }}
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+      {{/* sysdig-deploy support start */}}
+      {{- else if .Values.global.imagePullSecrets }}
+      imagePullSecrets:
+        {{- toYaml .Values.global.image.pullSecrets | nindent 8 }}
+      {{- end }}
+      {{/* sysdig-deploy support end */}}
       serviceAccountName: {{ include "cluster-shield.fullname" . }}
       securityContext: {}
       containers:
-        - name: {{ .Chart.Name }}
+        - name: "cluster-shield"
           {{- if eq .Values.run_command "run-all-namespaced" }}
           securityContext:
             privileged: true
@@ -41,7 +48,7 @@ spec:
             allowPrivilegeEscalation: true
           {{- end }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
-          imagePullPolicy: {{ .Values.image.pullPolicy }}
+          imagePullPolicy: {{ .Values.image.pullPolicy | default .Values.global.image.pullPolicy | default "IfNotPresent" }}
           args: [ {{ .Values.run_command | quote }} ]
           ports:
             - name: http
@@ -119,17 +126,25 @@ spec:
             - name: SSL_CERT_FILE
               value: /ca-certs/{{- include "cluster-shield.custom_ca.keyName" . -}}
             {{- end }}
-            {{- if .Values.proxy.httpProxy }}
+            {{- if or (or .Values.proxy.httpProxy .Values.proxy.httpsProxy) (or .Values.global.proxy.httpProxy .Values.global.proxy.httpsProxy) }}
             - name: HTTP_PROXY
-              value: "{{ .Values.proxy.httpProxy }}"
-            {{- end }}
-            {{- if .Values.proxy.httpsProxy }}
+              valueFrom:
+                secretKeyRef:
+                  name: {{ include "cluster-shield.proxySecretName" . }}
+                  key: httpProxy
+                  optional: true
             - name: HTTPS_PROXY
-              value: "{{ .Values.proxy.httpsProxy }}"
-            {{- end }}
-            {{- if or .Values.proxy.httpProxy .Values.proxy.httpsProxy }}
+              valueFrom:
+                secretKeyRef:
+                  name: {{ include "cluster-shield.proxySecretName" . }}
+                  key: httpsProxy
+                  optional: true
             - name: NO_PROXY
-              value: "{{ .Values.proxy.noProxy }}"
+              valueFrom:
+                secretKeyRef:
+                  name: {{ include "cluster-shield.proxySecretName" . }}
+                  key: noProxy
+                  optional: true
             {{- end }}
       volumes:
         - name: cluster-shield
