--- a/charts/sysdig-deploy/Chart.yaml
+++ b/charts/sysdig-deploy/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: sysdig-deploy
 description: A chart with various Sysdig components for Kubernetes
 type: application
-version: 1.55.3
+version: 1.56.0
 maintainers:
   - name: AlbertoBarba
     email: alberto.barba@sysdig.com
@@ -57,3 +57,9 @@ dependencies:
     version: ~0.9.1
     alias: rapidResponse
     condition: rapidResponse.enabled
+  - name: cluster-shield
+    # repository: https://charts.sysdig.com
+    repository: file://../cluster-shield
+    version: ~0.11.0
+    alias: clusterShield
+    condition: clusterShield.enabled
