feat(cluster-shield): document optional secure_api_token value

--- a/charts/cluster-shield/values.yaml
+++ b/charts/cluster-shield/values.yaml
@@ -52,6 +52,7 @@ cluster_shield:
     access_key:
     api_url:
     region:
+    secure_api_token:
   kubernetes:
     root_namespace: kube-system
   # Features
